<resources>
    <string name="alert_dialog_cancel">Abbrechen</string>
    <string name="alert_dialog_con">Verbinden</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="kaaConnectionLost">Verbindung zu Kaa wird hergestellt</string>
    <string name="kaaConnectionRecover">Mit Kaa verbunden</string>
    <string name="dialogConnectionError">Keine Verbindung zum Kaa Server. Bitte überprüfe deine Netzwerkeinstellungen.</string>
    <string name="dialogWarning">Warnung</string>
    <string name="dialogMessage">Nachricht</string>
    <string name="dialogNewMessage">Eine neue Nachricht</string>
    <string name="dialiogNoWater">Kein Wasser Vorhanden. Bitte nachfüllen</string>
    <string name="dialogLowWater">Wasserstand ist zu niedrig. Daher werden weniger Tassen als gewünscht gekocht.</string>
    <string name="dialogNoCarafe">Karafe wird nicht gefunden</string>
    <string name="dialogHighCupNumber">Die Anzahl der Tassen ist zu hoch. Sie wird dem aktuellen Wasserstand angepasst.</string>
    <string name="dialogLowCupNumber">Die Anzahl der Tassen ist zu niedrig. Die Tassenzahl wird auf 1 gesetzt.</string>
    <string name="dialogCoffeeFinishedMessage">Kaffee ist fertig.Karafe kann nun entfernt werden</string>
    <string name="dialogCoffeeInfo">"Kaffee INFO: "</string>
    <string name="dialogStoppedBrewing">Kochvorgang wurde abgebrochen</string>
    <string name="dialogSmokeAlarm">Rauchmelder schlägt Alarm!</string>
    <string name="app_name">SmartControl</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="coffee">Coffee</string>
    <string name="light">Light</string>
    <string name="doors">Doors</string>
    <string name="car">Car</string>
    <string name="coffee_cups">Cups</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="kaa_administration">Kaa Administration</string>
    <string name="coffee_alarm">Coffee Alarm</string>
    <string name="license">License</string>
    <string name="about">About</string>
    <string name="smart_control">Smart Control</string>
    <string name="water_level_indicator_label">Water level</string>
    <string name="grinder_label">Grinder</string>
    <string name="coffee_strength_weak">WEAK</string>
    <string name="coffee_strength_medium">MEDIUM</string>
    <string name="coffee_strength_strong">STRONG</string>
    <string name="coffee_cook">Cook coffee</string>
    <string name="garage_door">Garage door</string>
    <string name="house_door">House door</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="btn_add_room">add Room</string>
    <string name="hint_redport">Port red</string>
    <string name="hint_greenport">Port green</string>
    <string name="hint_blueport">Port blue</string>
    <string name="hint_roomname">Roomname</string>
    <string name="btn_confirm">Confirm changes</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="room_name">Room name</string>
    <string name="change_color">Change Color</string>
</resources>