<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_language"
                android:icon="@drawable/ic_language_black"
                android:title="@string/language" />
            <item
                android:id="@+id/nav_kaa"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/kaa_administration" />

            <item
                android:id="@+id/nav_license"
                android:icon="@drawable/ic_copyright_black"
                android:title="@string/license" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
