<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addLightLayout">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            style="@style/EditTextThemeRoomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp">

            <EditText
                android:id="@+id/input_roomname"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_roomname"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_redport"
            style="@style/EditTextThemePortRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_redport"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_redport"
                android:inputType="number"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_greenport"
            style="@style/EditTextThemePortGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_greenport"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_greenport"
                android:inputType="number"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_blueport"
            style="@style/EditTextThemePortBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_blueport"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_blueport"
                android:inputType="number"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_add_room"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/primary_dark"
            android:text="@string/btn_add_room"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>